@@ -16,6 +16,7 @@ corpus/archives/DZT-Sample-0.03.tar.gz
 corpus/gitvercheck.git
 lib/Dist/Zilla/Plugin/ArchiveRelease.pm
 lib/Dist/Zilla/Plugin/GitVersionCheckCJM.pm
+lib/Dist/Zilla/Plugin/Metadata.pm
 lib/Dist/Zilla/Plugin/ModuleBuild/Custom.pm
 lib/Dist/Zilla/Plugin/TemplateCJM.pm
 lib/Dist/Zilla/Plugin/VersionFromModule.pm
@@ -24,6 +25,7 @@ t/00-compile.t
 t/arcrel.t
 t/gitvercheck.t
 t/mb_custom.t
+t/metadata.t
 t/release-pod-coverage.t
 t/release-pod-syntax.t
 t/template.t
