@@ -35,6 +35,7 @@ version                   = 0.77 ; new API
 Git::Wrapper              = 0
 
 [Prereqs / TestRequires]
+Dist::Zilla::Tester       = 4.101800 ; Builder short name
 Test::More                = 0.88 ; done_testing
 File::pushd               = 0
 
